# pancakeLLM

./: .gitignore  Cargo.toml  README.md  build.rs  setup_env.sh
.github/workflows/: integration.yml
data/: test_dataset.jsonl
src/: dataset.rs  lib.rs  main.rs  model.rs  tokenizer.rs  trainer.rs
tests/: tokenizer_tests.rs
